@startuml

title __SOLUTION's Class Diagram__\n

  namespace patterns.facade {
    namespace solution {
      class patterns.facade.solution.HomeTheater {
          + KijkFilmMetPopcorn()
          + LuisterNaarMuziek()
          + StopFilm()
          + muteGeluid()
      }
    }
  }
  

  namespace patterns.facade {
    namespace solution {
      interface patterns.facade.solution.HomeTheaterInterface {
          {abstract} + KijkFilmMetPopcorn()
          {abstract} + LuisterNaarMuziek()
          {abstract} + StopFilm()
          {abstract} + muteGeluid()
      }
    }
  }
  

  namespace patterns.facade {
    namespace solution {
      class patterns.facade.solution.Main {
          {static} + main()
      }
    }
  }
  

  patterns.facade.solution.HomeTheater .up.|> patterns.facade.solution.HomeTheaterInterface
  patterns.facade.solution.HomeTheater o-- patterns.facade.CDSpeler : lnkCDSpeler
  patterns.facade.solution.HomeTheater o-- patterns.facade.Lichten : lnkLichten
  patterns.facade.solution.HomeTheater o-- patterns.facade.PopcornPopper : lnkPopcornPopper
  patterns.facade.solution.HomeTheater o-- patterns.facade.Projector : lnkProjector
  patterns.facade.solution.HomeTheater o-- patterns.facade.Scherm : lnkScherm
  patterns.facade.solution.HomeTheater o-- patterns.facade.Tuner : lnkTuner
  patterns.facade.solution.HomeTheater o-- patterns.facade.Versterker : versterker


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
